--- a/main/templates/state_list.html
+++ b/main/templates/state_list.html
@@ -1,14 +1,75 @@
+{% extends "base.html"%}
+{% load staticfiles %}
 
-<h2>This is a list</h2></br>
-{{states}}
 
-</br>
 
-<h2>This is looping through the list</h2></br>
-    {% for state in states %}   
-    <a href="/stateCapital_detail/{{state.pk}}/">{{stateCapital}}</a>
-    {{stateCapital.pk}}
-    {{stateCapital.name}}
-    </br> 
-    
-{% endfor %}
+
+{% block body %}
+    <div class="container">
+
+        <div class="row">
+            <div class="box">
+                <div class="col-lg-12">
+                    <hr>
+                    <h2 class="intro-text text-center">
+                        <strong>State Details</strong>
+                    </h2>
+                    <hr>
+                </div>
+
+                {% for state in states %}
+                <div class="col-lg-12 text-center">
+                    {% comment %}
+                    <img class="img-responsive img-border img-full" src="{% static 'img/slide-1.jpg' %}" alt="">
+                    {% endcomment %}
+                    <h2>State: <a href="/state_search/">{{ state.name }}</a></h2>
+                        
+                    
+                    <h2>Cities:<a href="/city_search/{{ city.pk }}" class="btn btn-default btn-lg" type="submit">SELECT</a></h2>
+                        {% for city in state.city_set.all|slice:":30" %}
+                           {{ city }}
+                        {% endfor %}
+                        <br>
+
+                        <h2>Capital: {{ state.statecapital }}</h2>
+                    
+                        <br>
+                    
+                    {% comment %}
+                        {% for city in state.city_set.all|slice:":30" %}
+                            {{ city }}
+                        {% endfor %}
+                    {% endcomment %}
+                    <br>
+
+                    <a href="/StateCapital_detail/{{ state.statecapital.pk }}" class="btn btn-default btn-lg">Map</a>
+                    <hr>
+                    
+        
+                {% endfor %}
+
+
+                {% comment %}
+                <div class="col-lg-12 text-center">
+                    <ul class="pager">
+                        <li class="previous"><a href="#">&larr; Older</a>
+                        </li>
+                        <li class="next"><a href="#">Newer &rarr;</a>
+                        </li>
+                    </ul>
+                </div>
+                {% endcomment %}
+            </div>
+        </div>
+
+    </div>
+{% endblock %}
+
+
+
+
+
+
+
+
+        
