--- a/main/templates/city_search.html
+++ b/main/templates/city_search.html
@@ -1,24 +1,67 @@
-<form method="POST" action="/city_search/">  
-    {% csrf_token %}
-
-    {{ form.as_table }}
-
-    <input type="submit" value="Search" />
-
-</form>
-
-</br>  
-</br>
-
-{{ valid }}
-
-</br>  
-</br>
-
-{% for city in city_list %}
-
-    <a href="/cities/{{ city.pk }}">{{ city }}</a>
-    </br>
+{% extends "base.html"%}
+{% load staticfiles %}
 
 
-{% endfor %}
+
+
+{% block body %}
+    <div class="container">
+
+        <div class="row">
+            <div class="box">
+                <div class="col-lg-12">
+                    <hr>
+                    <h2 class="intro-text text-center">
+                        <strong>List</strong>
+                    </h2>
+                    <hr>
+                </div>
+            
+
+                {% for city in cities %}
+                <div class="col-lg-12 text-center">
+                    {% comment %}
+                    <img class="img-responsive img-border img-full" src="{% static 'img/slide-1.jpg' %}" alt="">
+                    {% endcomment %}
+                    {% for state in states %}
+                    <h2>{{ state.name }}</h2>
+                    {% endfor %}
+                        <br>
+                        <h2>{{ city.name }}</h2>
+                   
+                    <p>
+                        {% for state in state.city_set.all %}
+                            {{ state.city}}
+                        {% endfor %}
+                    </p>
+                    
+                    <hr>
+
+                </div>
+                {% endfor %}
+
+
+                {% comment %}
+                <div class="col-lg-12 text-center">
+                    <ul class="pager">
+                        <li class="previous"><a href="#">&larr; Older</a>
+                        </li>
+                        <li class="next"><a href="#">Newer &rarr;</a>
+                        </li>
+                    </ul>
+                </div>
+                {% endcomment %}
+            </div>
+        </div>
+
+    </div>
+{% endblock %}
+
+
+
+
+
+
+
+
+        
