--- a/main/templates/stateCapital_detail.html
+++ b/main/templates/stateCapital_detail.html
@@ -1,5 +1,73 @@
-<h4>{{state_capital.name}}</h4>
+{% extends 'base.html' %}
+{% load humanize %}
+{% block body %}
+    <style>
 
-State: {{state_capital.state}}
-<br>
-State Capital: {{state_capital.stateCapital}}
+
+
+    </style>
+
+    <div class="container">
+
+        <div class="row">
+            <div class="box">
+                <div class="col-lg-12">
+                    <hr>
+                    <h2 class="intro-text text-center">State:
+                        <a href="/state_list/"><strong>{{ state.name }}</strong></a>
+                    </h2>
+                    <hr>
+                </div>
+                <div class="col-md-8">
+                    <!-- Embedded Google Map using an iframe - to select your location find it on Google maps and paste the link as the iframe src. If you want to use the Google Maps API instead then have at it! -->
+                    <div id="map" style="min-height:400px;min-width:100%">
+                        --> map goes here <---
+                    </div>
+                </div>
+                <div class="col-md-4">
+                    <p>Capital:
+                        <strong>{{ statecapital.name }}</strong>
+                    </p>
+                    <p>Capital Population:
+                        <strong>{{ statecapital.pop|intcomma }}</strong>
+                    </p>
+
+                </div>
+                <div class="clearfix"></div>
+            </div>
+        </div>
+
+    </div>
+
+    <script src="https://maps.googleapis.com/maps/api/js?callback=initMap" async defer></script>
+
+    <script type="text/javascript">
+    var map;
+
+    function initMap() {
+        map = new google.maps.Map(document.getElementById('map'),{
+            center: {lat: {{ statecapital.lat}}, lng:{{ statecapital.lon}}},
+            zoom: 8
+        });
+
+        var markerPos = new google.maps.LatLng({{ statecapital.lat}}, {{ statecapital.lon}});
+
+        var marker = new google.maps.Marker({
+            position: markerPos,
+            map: map,
+            title: "{{ statecapital.name }}"
+        });
+
+        var infowindow = new google.maps.InfoWindow({
+            content: "{{ statecapital.name }}"
+        });
+
+        marker.addListener('click', function() {
+            infowindow.open(map,marker)
+        })
+    }
+
+    </script>
+
+
+{% endblock body %}
