--- a/main/templates/stateCapital_list.html
+++ b/main/templates/stateCapital_list.html
@@ -1,12 +1,62 @@
-<h2>This is a list</h2></br>
-{{stateCapital}}
+{% extends "base.html"%}
+{% load staticfiles %}
 
-</br>
 
-<h2>This is looping through the list</h2></br>
-    {% for stateCapital in stateCaptials %}   
-    <a href="/stateCapital_list/{{stateCapital.pk}}"/>{{stateCapital}}</a>
-    {{stateCapital.pk}}
-    
-    
-{% endfor %}
+
+
+{% block body %}
+    <div class="container">
+
+        <div class="row">
+            <div class="box">
+                <div class="col-lg-12">
+                    <hr>
+                    <h2 class="intro-text text-center">
+                        <strong>List</strong>
+                    </h2>
+                    <hr>
+                </div>
+
+                {% for statecapital in statecapitals %}
+                <div class="col-lg-12 text-center">
+                    {% comment %}
+                    <img class="img-responsive img-border img-full" src="{% static 'img/slide-1.jpg' %}" alt="">
+                    {% endcomment %}
+                    <h2>{{ statecapital.name }}</h2>
+                        <br>
+                        <small>{{ state.statecapital }}</small>
+                    </h2>
+                   <p>
+                        {% for statecapital in state.statecapital_set.all|slice:":30" %}
+                            {{ city }}
+                        {% endfor %}
+                    </p> 
+                    <a href="/StateCapital_detail/{{ statecapital.pk }}"class="btn btn-default btn-lg">Read More</a>
+                    <hr>
+                </div>
+                {% endfor %}
+
+
+                {% comment %}
+                <div class="col-lg-12 text-center">
+                    <ul class="pager">
+                        <li class="previous"><a href="#">&larr; Older</a>
+                        </li>
+                        <li class="next"><a href="#">Newer &rarr;</a>
+                        </li>
+                    </ul>
+                </div>
+                {% endcomment %}
+            </div>
+        </div>
+
+    </div>
+{% endblock %}
+
+
+
+
+
+
+
+
