--- a/main/templates/state_detail.html
+++ b/main/templates/state_detail.html
@@ -1,16 +1,34 @@
-<h3>{{state.name}}</h3>
-
-{% comment %}
-<p>Capital:{{state.statecapital_set.all.first.name}}</p>
-<p>Population:{{state.statecapital_set.all.first.pop}}</p>
-<p>Longitude:{{state.statecapital_set.all.first.lon}}</p>
-<p>Latitude:{{state.statecapital_set.all.first.lat}}</p>
-<p>{{state.statecapital_set.all}}</p>
-{% endcomment %}
-
-<h3>Capital:</h3>{{state.statecapital.name}}</br>
-    Population: {{state.statecapital.pop}}</br>
-    Longitude: {{ state.statecapital.lon}}</br>
-    Latitude: {{ state.statecapital.lat}}</br>
+{% extends "base.html"%}
+{% load staticfiles %}
 
 
+{% block body %}
+
+<div class="container">
+    <div class="row">
+        <div class="col-md-6">
+
+        
+    <a href="/state_list/"><h2>State: {{city.state}}</h2></a>
+
+    </div>
+        </div>
+
+<!-- Below is what is passed through the context -->
+    <div class="row">
+        <div class="col-md-6">
+        <a href="/state_list/"><h1> City: {{city.name}}</h1></a>
+    </div>
+        </div>
+
+
+
+
+
+
+
+{%  endblock %}
+
+
+
+</div>
