--- a/main/templates/state_search.html
+++ b/main/templates/state_search.html
@@ -1,23 +1,58 @@
-<pre>
-Get:{{request.GET}}
-<br>
-Post:{{request.POST}}
-<br>
+{% extends "base.html"%}
+{% load staticfiles %}
 
 
 
-<span>Search:</span>
-<form action="/state_search/" method="POST">
-{% csrf_token %}
-<input name="random_name" type="text">
-    
-</form>
-{% for state in states%}
-<a href="/state_detail/{{state.pk}}/">{{state.name}}</a>
 
-{% endfor %}
-<br>
+{% block body %}
+    <div class="container">
+
+        <div class="row">
+            <div class="box">
+                <div class="col-lg-12">
+                    <hr>
+                    <h2 class="intro-text text-center">
+                        <strong>State Search</strong>
+                    </h2>
+                    <hr>
+                </div>
+
+                {% for state in states %}
+                <div class="col-lg-12 text-center">
+                    {% comment %}
+                    <img class="img-responsive img-border img-full" src="{% static 'img/slide-1.jpg' %}" alt="">
+                    {% endcomment %}
+                    <h2>{{ state.name }}
+                        <br>
+                        <small>{{ state.states }}</small>
+                    </h2>
+                    {% comment %}
+                    <p>
+                        {% for state in state.name_set.all|slice:":30" %}
+                            <a href="/state_detail/{{ city.pk }}">{{ city }}</a>
+                        {% endfor %}
+                    </p>
+                    {% endcomment %}
+                    <a href="/StateCapital_detail/{{ state.statecapital.pk }}" class="btn btn-default btn-lg">Read More</a>
+                    <hr>
+                </div>
+            
+                {% endfor %}
 
 
+                {% comment %}
+                <div class="col-lg-12 text-center">
+                    <ul class="pager">
+                        <li class="previous"><a href="#">&larr; Older</a>
+                        </li>
+                        <li class="next"><a href="#">Newer &rarr;</a>
+                        </li>
+                    </ul>
+                </div>
+                {% endcomment %}
+            </div>
+        </div>
 
-</pre>
+    </div>
+{% endblock %}
+
