--- a/main/templates/stateCapital_detail.html
+++ b/main/templates/stateCapital_detail.html
@@ -31,6 +31,9 @@
                     <p>Capital Population:
                         <strong>{{ statecapital.pop|intcomma }}</strong>
                     </p>
+                    <p>
+                        <img class='col-md-12' src="{{statecapital.state.state_map.url}}" alt="">
+                    </p>
 
                 </div>
                 <div class="clearfix"></div>
