--- a/main/templates/state_list.html
+++ b/main/templates/state_list.html
@@ -9,7 +9,7 @@
 
         <div class="row">
             <div class="box">
-                <div class="col-lg-12">
+                <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
                     <hr>
                     <h2 class="intro-text text-center">
                         <strong>State Details</strong>
@@ -44,21 +44,7 @@
 
                     <a href="/StateCapital_detail/{{ state.statecapital.pk }}" class="btn btn-default btn-lg">Map</a>
                     <hr>
-                    
-        
-                {% endfor %}
-
-
-                {% comment %}
-                <div class="col-lg-12 text-center">
-                    <ul class="pager">
-                        <li class="previous"><a href="#">&larr; Older</a>
-                        </li>
-                        <li class="next"><a href="#">Newer &rarr;</a>
-                        </li>
-                    </ul>
-                </div>
-                {% endcomment %}
+                    {% endfor %}
             </div>
         </div>
 
