--- a/main/templates/ajax_search.html
+++ b/main/templates/ajax_search.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>  
 <html>  
 <head>  
-        <title>Cereal List</title>
+        <title>State List</title>
 
 </head>  
     <body>
