--- a/main/templates/base.html
+++ b/main/templates/base.html
@@ -46,9 +46,9 @@
             <div class="navbar-header">
                 <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
                     <span class="sr-only">Toggle navigation</span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
+                    <span class="icon-bar">State Info</span>
+                    <span class="icon-bar">State Capital</span>
+                    <span class="icon-bar">State Search</span>
                 </button>
             </div>
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-2">
