--- a/main/templates/city_search.html
+++ b/main/templates/city_search.html
@@ -12,45 +12,40 @@
                 <div class="col-lg-12">
                     <hr>
                     <h2 class="intro-text text-center">
-                        <strong>List</strong>
+                        <strong><h2>{{state.name}}</h2></strong>
                     </h2>
                     <hr>
                 </div>
-            
+               
 
-                {% for city in cities %}
+               {% for city in state.city_set.all %}
+                          
+                        
                 <div class="col-lg-12 text-center">
+                 
+
                     {% comment %}
-                    <img class="img-responsive img-border img-full" src="{% static 'img/slide-1.jpg' %}" alt="">
-                    {% endcomment %}
                     {% for state in states %}
                     <h2>{{ state.name }}</h2>
                     {% endfor %}
+                    {% endcomment %}
                         <br>
                         <h2>{{ city.name }}</h2>
+
                    
+                   {% comment %}
                     <p>
                         {% for state in state.city_set.all %}
                             {{ state.city}}
                         {% endfor %}
                     </p>
+                    {% endcomment %}
                     
-                    <hr>
+                    
 
                 </div>
                 {% endfor %}
 
-
-                {% comment %}
-                <div class="col-lg-12 text-center">
-                    <ul class="pager">
-                        <li class="previous"><a href="#">&larr; Older</a>
-                        </li>
-                        <li class="next"><a href="#">Newer &rarr;</a>
-                        </li>
-                    </ul>
-                </div>
-                {% endcomment %}
             </div>
         </div>
 
