--- a/main/templates/stateCapital_detail.html
+++ b/main/templates/stateCapital_detail.html
@@ -1,11 +1,7 @@
 {% extends 'base.html' %}
 {% load humanize %}
 {% block body %}
-    <style>
-
-
-
-    </style>
+    
 
     <div class="container">
 
@@ -14,7 +10,7 @@
                 <div class="col-lg-12">
                     <hr>
                     <h2 class="intro-text text-center">State:
-                        <a href="/state_list/"><strong>{{ state.name }}</strong></a>
+                        <a href="/state_list/"><strong>{{ state_capital.state.name }}</strong></a>
                     </h2>
                     <hr>
                 </div>
@@ -26,13 +22,13 @@
                 </div>
                 <div class="col-md-4">
                     <p>Capital:
-                        <strong>{{ statecapital.name }}</strong>
+                        <strong>{{ state_capital.name }}</strong>
                     </p>
                     <p>Capital Population:
-                        <strong>{{ statecapital.pop|intcomma }}</strong>
+                        <strong>{{ state_capital.pop|intcomma }}</strong>
                     </p>
                     <p>
-                        <img class='col-md-12' src="{{ statecapital.state.state_map.url }}" alt="">
+                        <img class='col-md-12' src="{{ state_capital.state.state_map.url }}" alt="">
                     </p>
 
                 </div>
@@ -49,20 +45,20 @@
 
     function initMap() {
         map = new google.maps.Map(document.getElementById('map'),{
-            center: {lat: {{ statecapital.lat}}, lng:{{ statecapital.lon}}},
+            center: {lat: {{ state_capital.lat}}, lng:{{ state_capital.lon}}},
             zoom: 8
         });
 
-        var markerPos = new google.maps.LatLng({{ statecapital.lat}}, {{ statecapital.lon}});
+        var markerPos = new google.maps.LatLng({{ state_capital.lat}}, {{ state_capital.lon}});
 
         var marker = new google.maps.Marker({
             position: markerPos,
             map: map,
-            title: "{{ statecapital.name }}"
+            title: "{{ state_capital.name }}"
         });
 
         var infowindow = new google.maps.InfoWindow({
-            content: "{{ statecapital.name }}"
+            content: "{{ state_capital.name }}"
         });
 
         marker.addListener('click', function() {
