--- a/main/templates/stateCapital_list.html
+++ b/main/templates/stateCapital_list.html
@@ -12,7 +12,7 @@
                 <div class="col-lg-12">
                     <hr>
                     <h2 class="intro-text text-center">
-                        <strong>List</strong>
+                        <strong>Capital Name :</strong>
                     </h2>
                     <hr>
                 </div>
@@ -36,17 +36,6 @@
                 </div>
                 {% endfor %}
 
-
-                {% comment %}
-                <div class="col-lg-12 text-center">
-                    <ul class="pager">
-                        <li class="previous"><a href="#">&larr; Older</a>
-                        </li>
-                        <li class="next"><a href="#">Newer &rarr;</a>
-                        </li>
-                    </ul>
-                </div>
-                {% endcomment %}
             </div>
         </div>
 
