Added login view and changed CSS around

--- a/main/templates/city_search.html
+++ b/main/templates/city_search.html
@@ -30,8 +30,9 @@
                     {% endfor %}
                     {% endcomment %}
                         <br>
+                    <div class="city_name">
                         <h2>{{ city.name }}</h2>
-
+                    </div>
                    
                    {% comment %}
                     <p>
