--- a/main/templates/base.html
+++ b/main/templates/base.html
@@ -23,13 +23,6 @@
     <!-- Fonts -->
     <link href="http://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800" rel="stylesheet" type="text/css">
     <link href="http://fonts.googleapis.com/css?family=Josefin+Slab:100,300,400,600,700,100italic,300italic,400italic,600italic,700italic" rel="stylesheet" type="text/css">
-
-    <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
-    <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
-    <!--[if lt IE 9]>
-        <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
-        <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
-    <![endif]-->
     
 
 </head>
@@ -42,41 +35,49 @@
     <!-- Navigation -->
     <nav class="navbar navbar-default" role="navigation">
         <div class="container">
+            <div class="col-sm-12 col-md-12, col-lg-12">
+                <div class="row">
             <!-- Brand and toggle get grouped for better mobile display -->
-            <div class="navbar-header">
-                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
-                    <span class="sr-only">Toggle navigation</span>
-                    <span class="icon-bar">State Info</span>
-                    <span class="icon-bar">State Capital</span>
-                    <span class="icon-bar">State Search</span>
-                </button>
+                <div class="navbar-header">
+                    <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
+                        <span class="sr-only">Toggle navigation</span>
+                        <span class="icon-bar">State Info</span>
+                        <span class="icon-bar">State Capital</span>
+                        <span class="icon-bar">State Search</span>
+                        <span class="icon-bar">Login</span>
+                    </button>
+                </div>
+                        <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-2">
+                            <ul class="nav navbar-nav">
+                                <li>
+                                    <a href="/state_list/">State Info</a>
+                                </li>
+                                <li>
+                                    <a href="/StateCapital_list/">State Capital</a>
+                                </li>
+                                <li>
+                                    <a href="/state_search/">State Search</a>
+                                </li>
+                                <li>
+                                    <a href="/contact_view/">contact</a>
+                                </li>
+                                <li>
+                                    <a href="/login/">Login</a>
+                                </li>
+                                <li>
+                                    <a href="/">Logout</a>
+                                </li>
+                            </ul>
+                        </div>
+                </div>
             </div>
-            <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-2">
-                <ul class="nav navbar-nav">
-                    <li>
-                        <a href="/state_list/">State Info</a>
-                    </li>
-                    <li>
-                        <a href="/StateCapital_list/">State Capital</a>
-                    </li>
-                    <li>
-                        <a href="/state_search/">State Search</a>
-                    </li>
-                    {% comment %}
-                    <li>
-                        <a href="/city_list/">City Search</a>
-                    </li>
-                    {% endcomment %}
-                    <li>
-                        <a href="/contact_view/">contact</a>
-                    </li>
-                </ul>
-            </div>
-            <!-- /.navbar-collapse -->
-        </div>
-        <!-- /.container -->
+        </div>         
     </nav>
 {% block body%}
+
+
+
+
 
 
 
