--- a/main/templates/state_list.html
+++ b/main/templates/state_list.html
@@ -18,9 +18,11 @@
                 {% for state in states %}
                 <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 text-center">
                     <div class="row">
-                        <h2>State: <a href="/state_search/">{{ state.name }}</a></h2>
-                        <h2>Cities: <a href="/city_search/{{ state.pk }}/" class="btn btn-default btn-lg" type="submit"> SELECT</a></h2>
-                        <h2>Capital: <div id="capital">{{ state.statecapital }}</h2>
+                       
+                            <h2>State: <a href="/state_search/">{{ state.name }}</a></h2>
+                            <h2>Cities: <a href="/city_search/{{ state.pk }}/" class="btn btn-default btn-lg" type="submit"> SELECT</a></h2>
+                            <h2>Capital: <a href="/StateCapital_list/">{{ state.statecapital }}</a></h2>
+                       
                     <br>
                     <br>
                         <a href="/StateCapital_detail/{{ state.statecapital.pk }}" class="btn btn-default btn-lg">Map</a>
