--- a/main/templates/state_search.html
+++ b/main/templates/state_search.html
@@ -19,13 +19,10 @@
 
                 {% for state in states %}
                 <div class="col-lg-12 text-center">
-                    {% comment %}
-                    <img class="img-responsive img-border img-full" src="{% static 'img/slide-1.jpg' %}" alt="">
-                    {% endcomment %}
-                    <h2>{{ state.name }}
-                        <br>
-                        <small>{{ state.states }}</small>
-                    </h2>
+                    <div class="city_name">
+                        <h2>{{ state.name }}</h2>
+                    </div>
+                    <br>
                     {% comment %}
                     <p>
                         {% for state in state.name_set.all|slice:":30" %}
