Fixed static issues

--- a/main/templates/state_list.html
+++ b/main/templates/state_list.html
@@ -1,5 +1,6 @@
-{% extends "base.html"%}
+{% extends 'base.html'%}
 {% load staticfiles %}
+
 
 
 
@@ -39,7 +40,7 @@
         </div>
 
     </div>
-
+{% endblock %}
 <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/3.0.0-alpha1/jquery.min.js'></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/handlebars.js/2.0.0/handlebars.js"></script>
 
@@ -140,7 +141,7 @@
 
 </script>
 
-{% endblock %}
+
 
 
 
