--- a/main/templates/base.html
+++ b/main/templates/base.html
@@ -1,7 +1,9 @@
-{% load staticfiles %}
-<!DOCTYPE html>
-<html lang="en">
+{% load static from staticfiles %}
 
+<!DOCTYPE html>  
+<html>  
+<head>  
+    <title>{% block title %}{% endblock %}</title>
 <head>
 
     <meta charset="utf-8">
@@ -13,10 +15,13 @@
     <title>Django ( USA ) States</title>
 
     <!-- Bootstrap Core CSS -->
-    <link href="{% static 'css/bootstrap.min.css' %}" rel="stylesheet">
+    <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css"/>
+    {# <link href="{% static 'css/bootstrap.min.css' %}" rel="stylesheet"> #}
 
     <!-- Custom CSS -->
     <link href="{% static 'css/business-casual.css' %}" rel="stylesheet">
+
+    <link href="{% static 'css/bootstrap.css' %}" rel="stylesheet">
 
     <link href="{% static 'css/mystyle.css' %}" rel="stylesheet">
 
@@ -98,6 +103,7 @@
 
     <!-- Bootstrap Core JavaScript -->
     <script src="{% static 'js/bootstrap.min.js' %}"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
    
    <script>
 
