Fixed centering issue.  Added rows to bootstrap state_list

--- a/main/templates/login.html
+++ b/main/templates/login.html
@@ -10,6 +10,7 @@
 
     
     {% if request.user.is_anonymous %}
+    <div class="box">
         <form method="post" action="/login/">
             {% csrf_token %}
 
@@ -28,6 +29,7 @@
             <input type='submit' value='login'/>
             <input type='hidden' name="next" value="{{next}}"/>
         </form>
+    </div>
 
     {% else %}
 
