--- a/main/templates/base.html
+++ b/main/templates/base.html
@@ -40,7 +40,7 @@
     <!-- Navigation -->
     <nav class="navbar navbar-default" role="navigation">
         <div class="container">
-            <div class="col-sm-12 col-md-12, col-lg-12">
+            <div class="col-xs-12 col-sm-12 col-md-12, col-lg-12">
                 <div class="row">
             <!-- Brand and toggle get grouped for better mobile display -->
                 <div class="navbar-header">
@@ -52,7 +52,7 @@
                         <span class="icon-bar">Login</span>
                     </button>
                 </div>
-                        <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-2">
+                        <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-4">
                             <ul class="nav navbar-nav">
                                 <li>
                                     <a href="/state_list/">State Info</a>
@@ -90,8 +90,8 @@
 {% endblock body %}
 <footer>
         <div class="container">
-            <div class="row">
                 <div class="col-lg-12 text-center">
+                    <div class="row">
                     <p>Copyright &copy; Django States 2015</p>
                 </div>
             </div>
