--- a/main/templates/signup.html
+++ b/main/templates/signup.html
@@ -2,7 +2,7 @@
 
 {% block body %}
 
-    <form action="{% url 'singup_view' %}" method="POST">
+    <form action="/signup" method="POST">
         {% csrf_token %}
 
         {{form.as_p}}
