--- a/main/templates/state_list.html
+++ b/main/templates/state_list.html
@@ -23,9 +23,12 @@
                             <h2>State: <a href="/state_search/">{{ state.name }}</a></h2>
                                 <a href="/vote/{{state.pk}}/?vote_type=up">Vote Up ({{state.upvotes.all.count}} )</a> |
                                 <a href="/vote/{{state.pk}}/?vote_type=down">Vote Down ({{state.downvotes.all.count}})</a>
+                    </div>
+
+                    <div class="row">
                             <h2>Cities: <a href="/city_search/{{ state.pk }}/" class="btn btn-default btn-lg" type="submit"> SELECT</a></h2>
                             <h2>Capital: <a href="/StateCapital_list/">{{ state.statecapital }}</a></h2>
-                       
+                     </div>  
                     <br>
                     <br>
                         <a href="/StateCapital_detail/{{ state.statecapital.pk }}" class="btn btn-default btn-lg">Map</a>
