--- a/main/static/css/bootstrap.css
+++ b/main/static/css/bootstrap.css
@@ -117,7 +117,7 @@ select,
 textarea {
   margin: 0;
   font: inherit;
-  color: inherit;
+  color: black !important;
 }
 button {
   overflow: visible;
