--- a/main/templates/base.html
+++ b/main/templates/base.html
@@ -15,8 +15,8 @@
     <title>Django ( USA ) States</title>
 
     <!-- Bootstrap Core CSS -->
-    <!--<link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css"/>-->
-    {# <link href="{% static 'css/bootstrap.min.css' %}" rel="stylesheet"> #}
+    <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css"/>
+    <link href="{% static 'css/bootstrap.min.css' %}" rel="stylesheet"> 
 
     <!-- Custom CSS -->
     <link href="{% static 'css/business-casual.css' %}" rel="stylesheet">
@@ -37,69 +37,70 @@
 
     <div class="brand">Django States</div>
     <div class="address-bar"> Django States Project| CodingCampus.us <div id="time"></div>
-
+        
+            
     <!-- Navigation -->
     <nav class="navbar navbar-default" role="navigation">
         <div class="container">
-            <div class="col-xs-12 col-sm-12 col-md-12, col-lg-12">
-                <div class="row">
-            <!-- Brand and toggle get grouped for better mobile display -->
-                <div class="navbar-header">
-                    <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
-                        <span class="sr-only">Toggle navigation</span>
-                        <span class="icon-bar">State Info</span>
-                        <span class="icon-bar">State Capital</span>
-                        <span class="icon-bar">State Search</span>
-                        <span class="icon-bar">Login</span>
-                    </button>
-                </div>
-                </div>
-
-                        <div class="collapse navbar-collapse">
-                            <div class="row">
-                                <ul class="nav navbar-nav">
-
-                                    <li>
-                                        <a href="/">State Info</a>
-                                    </li>
-                                    <li>
-                                        <a href="/StateCapital_list/">State Capital</a>
-                                    </li>
-                                    <li>
-                                        <a href="/state_search/">State Search</a>
-                                    </li>
-                                    <li>
-                                        <a href="/contact_view/">contact</a>
-                                    </li>
-                                    <li>
-                                        <a href="/login/">Login</a>
-                                    </li>
-                                    <li>
-                                        <a href="/">Logout</a>
-                                    </li>
-                                   
-                                </ul>
-                            </div>
-                        </div>
-             
-        </div> 
-    </div>        
+           <div class="navbar-header">
+                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
+                    <span class="sr-only">Toggle navigation</span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                </button>
+                <a class="navbar-brand" href="/StateCapital_list/">Business Casual</a>
+            </div>
+            <div class="collapse navbar-collapse"  id="bs-example-navbar-collapse-1">
+                <ul class="nav navbar-nav">
+                    <li>
+                        <a href="/">State Info</a>
+                    </li>
+                    <li>
+                        <a href="/StateCapital_list/">State Capital</a>
+                    </li>
+                    <li>
+                        <a href="/state_search/">State Search</a>
+                    </li>
+                    <li>
+                        <a href="/contact_view/">contact</a>
+                    </li>
+                    <li>
+                        <a href="/login/">Login</a>
+                    </li>
+                    <li>
+                        <a href="/">Logout</a>
+                    </li>  
+                </ul>
+            </div>
+        </div>      
     </nav>
-{% block body%}
+    {% block body%}
+    {% endblock body %}
+    <div class="container">
 
-
-
-
-
-
-
-
-{% endblock body %}
-<footer>
-        <div class="container">
+        <div class="row">
+            <div class="box">
                 <div class="col-lg-12 text-center">
-                    <div class="row">
-                    <p>Copyright &copy; Django States 2015</p>
+                    <h1 class="brand-name">Django States</h1>
+                    <hr class="tagline-divider">
+                    <h2>
+                        <small>By
+                            <strong>Shaylee Hansen</strong>
+                        </small>
+                    </h2>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <!-- /.container -->
+
+    <footer>
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-12 text-center">
+                    <p>Copyright &copy; FirstDjango 2015</p>
                 </div>
             </div>
         </div>
@@ -109,14 +110,18 @@
     <script src="{% static 'js/jquery.js' %}"></script>
 
     <!-- Bootstrap Core JavaScript -->
-    <script src="{% static 'js/bootstrap.min.js' %}"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
-   
-   <script>
+    <script src="{% static 'js/bootstrap.min.js'%}"></script>
+    <script type="{% static 'js/bootstrap.js'%}"></script>
 
-   document.getElementById("time").innerHTML = Date();
-
-   </script>
+    <
+    <script>
+        document.getElementById("time").innerHTML = Date();
+    </script>
 
 </body>
+
 </html>
+
+                                                               
+                 
+    
